Updating Dockerfile and version tag