@@ -1,11 +1,10 @@
-FROM gradle:8-jdk17-alpine as builder
-USER root
+FROM gradle:8.0.0-jdk17-alpine as build
+COPY --chown=gradle:gradle . /builder
 WORKDIR /builder
-ADD . /builder
 RUN gradle build --stacktrace
 
-FROM openjdk:17
-WORKDIR /app
+FROM openjdk:17-slim
 EXPOSE 8080
-COPY --from=builder /builder/build/libs/threem-0.0.1-SNAPSHOT.jar .
-CMD ["java", "-jar", "threem-0.0.1-SNAPSHOT.jar"]
+COPY --from=build /builder/build/libs/threem-1.0.jar /app/
+RUN bash -c 'touch /app/threem-1.0.jar'
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/threem-1.0.jar"]
